--- a/packages/default-theme/style/datagrid.css
+++ b/packages/default-theme/style/datagrid.css
@@ -28,14 +28,13 @@
   background-color: #A0A0A0;
 }
 
-.cell-editor-occluder {
+.p-DataGrid-cellEditorOccluder {
   pointer-events: none;
   position: absolute;
   overflow: hidden;
 }
 
-.cell-editor-container {
-  pointer-events: auto;
+.p-DataGrid-cellEditorContainer {
   position: absolute;
   background-color: #ffffff;
   box-sizing: border-box;
@@ -43,30 +42,29 @@
   border: 2px solid #006bf7;
 }
 
-.cell-editor-container.invalid {
+.p-DataGrid-cellEditorContainer.invalid {
   box-shadow: 0px 0px 6px red;
   border: 2px solid red;
 }
 
-.cell-editor-container > form {
+.p-DataGrid-cellEditorContainer > form {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
-.cell-editor {
-  pointer-events: auto;
+.p-DataGrid-cellEditorWidget {
   width: 100%;
   height: 100%;
   outline: none;
   box-sizing: border-box;
 }
 
-.input-cell-editor {
+.p-DataGrid-cellEditorInput {
   background-color: #ffffff;
   border: 0;
 }
 
-.boolean-cell-editor {
+.p-DataGrid-cellEditorCheckbox {
   margin: 0;
 }
