--- a/examples/example-datastore/style/tabbar.css
+++ b/examples/example-datastore/style/tabbar.css
@@ -8,13 +8,13 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-TabBar {
+.lm-TabBar {
   min-height: 24px;
   max-height: 24px;
 }
 
 
-.p-TabBar-content {
+.lm-TabBar-content {
   min-width: 0;
   min-height: 0;
   align-items: flex-end;
@@ -22,7 +22,7 @@
 }
 
 
-.p-TabBar-tab {
+.lm-TabBar-tab {
   padding: 0px 10px;
   background: #E5E5E5;
   border: 1px solid #C0C0C0;
@@ -37,47 +37,47 @@
 }
 
 
-.p-TabBar-tab.p-mod-current {
+.lm-TabBar-tab.lm-mod-current {
   background: white;
 }
 
 
-.p-TabBar-tab:hover:not(.p-mod-current) {
+.lm-TabBar-tab:hover:not(.lm-mod-current) {
   background: #F0F0F0;
 }
 
 
-.p-TabBar-tab:first-child {
+.lm-TabBar-tab:first-child {
   margin-left: 0;
 }
 
 
-.p-TabBar-tab.p-mod-current {
+.lm-TabBar-tab.lm-mod-current {
   min-height: 23px;
   max-height: 23px;
   transform: translateY(1px);
 }
 
 
-.p-TabBar-tabIcon,
-.p-TabBar-tabLabel,
-.p-TabBar-tabCloseIcon {
+.lm-TabBar-tabIcon,
+.lm-TabBar-tabLabel,
+.lm-TabBar-tabCloseIcon {
   display: inline-block;
 }
 
 
-.p-TabBar-tab.p-mod-closable > .p-TabBar-tabCloseIcon {
+.lm-TabBar-tab.lm-mod-closable > .lm-TabBar-tabCloseIcon {
   margin-left: 4px;
 }
 
 
-.p-TabBar-tab.p-mod-closable > .p-TabBar-tabCloseIcon:before {
+.lm-TabBar-tab.lm-mod-closable > .lm-TabBar-tabCloseIcon:before {
   content: '\f00d';
   font-family: FontAwesome;
 }
 
 
-.p-TabBar-tab.p-mod-drag-image {
+.lm-TabBar-tab.lm-mod-drag-image {
   min-height: 23px;
   max-height: 23px;
   min-width: 125px;
