--- a/packages/widgets/style/scrollbar.css
+++ b/packages/widgets/style/scrollbar.css
@@ -8,7 +8,7 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-ScrollBar {
+.lm-ScrollBar {
   display: flex;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -17,23 +17,23 @@
 }
 
 
-.p-ScrollBar[data-orientation='horizontal'] {
+.lm-ScrollBar[data-orientation='horizontal'] {
   flex-direction: row;
 }
 
 
-.p-ScrollBar[data-orientation='vertical'] {
+.lm-ScrollBar[data-orientation='vertical'] {
   flex-direction: column;
 }
 
 
-.p-ScrollBar-button {
+.lm-ScrollBar-button {
   box-sizing: border-box;
   flex: 0 0 auto;
 }
 
 
-.p-ScrollBar-track {
+.lm-ScrollBar-track {
   box-sizing: border-box;
   position: relative;
   overflow: hidden;
@@ -41,7 +41,7 @@
 }
 
 
-.p-ScrollBar-thumb {
+.lm-ScrollBar-thumb {
   box-sizing: border-box;
   position: absolute;
 }
