--- a/packages/default-theme/style/commandpalette.css
+++ b/packages/default-theme/style/commandpalette.css
@@ -8,25 +8,25 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-CommandPalette {
+.lm-CommandPalette {
   font-family: sans-serif;
   background: #F5F5F5;
 }
 
 
-.p-CommandPalette-search {
+.lm-CommandPalette-search {
   padding: 8px;
 }
 
 
-.p-CommandPalette-wrapper {
+.lm-CommandPalette-wrapper {
   padding: 4px 6px;
   background: white;
   border: 1px solid #E0E0E0;
 }
 
 
-.p-CommandPalette-input {
+.lm-CommandPalette-input {
   width: 100%;
   border: none;
   outline: none;
@@ -34,7 +34,7 @@
 }
 
 
-.p-CommandPalette-header {
+.lm-CommandPalette-header {
   padding: 4px;
   color: #757575;
   font-size: 12px;
@@ -44,20 +44,20 @@
 }
 
 
-.p-CommandPalette-header:hover::before {
+.lm-CommandPalette-header:hover::before {
   content: '\2026'; /* ellipsis */
   float: right;
   margin-right: 4px;
 }
 
 
-.p-CommandPalette-header > mark {
+.lm-CommandPalette-header > mark {
   background-color: transparent;
   font-weight: bold;
 }
 
 
-.p-CommandPalette-item {
+.lm-CommandPalette-item {
   padding: 4px 8px;
   color: #757575;
   font-size: 13px;
@@ -65,7 +65,7 @@
 }
 
 
-.p-CommandPalette-emptyMessage {
+.lm-CommandPalette-emptyMessage {
   padding: 4px;
   color: #757575;
   font-size: 12px;
@@ -74,38 +74,38 @@
 }
 
 
-.p-CommandPalette-item.p-mod-disabled {
+.lm-CommandPalette-item.lm-mod-disabled {
   color: rgba(0, 0, 0, 0.25);
 }
 
 
-.p-CommandPalette-item.p-mod-active {
+.lm-CommandPalette-item.lm-mod-active {
   background: #7FDBFF;
 }
 
 
-.p-CommandPalette-item:hover:not(.p-mod-active):not(.p-mod-disabled) {
+.lm-CommandPalette-item:hover:not(.lm-mod-active):not(.lm-mod-disabled) {
   background: #E5E5E5;
 }
 
 
-.p-CommandPalette-itemIcon {
+.lm-CommandPalette-itemIcon {
   display: none;
 }
 
 
-.p-CommandPalette-itemLabel > mark {
+.lm-CommandPalette-itemLabel > mark {
   background-color: transparent;
   font-weight: bold;
 }
 
 
-.p-CommandPalette-item.p-mod-disabled mark {
+.lm-CommandPalette-item.lm-mod-disabled mark {
   color: rgba(0, 0, 0, 0.4);
 }
 
 
-.p-CommandPalette-itemCaption {
+.lm-CommandPalette-itemCaption {
   color: #9E9E9E;
   font-size: 11px;
   font-weight: 400;
