--- a/packages/default-theme/style/datagrid.css
+++ b/packages/default-theme/style/datagrid.css
@@ -6,19 +6,19 @@
 | The full license is in the file LICENSE, distributed with this software.
 |----------------------------------------------------------------------------*/
 
-.p-DataGrid {
+.lm-DataGrid {
   min-width: 64px;
   min-height: 64px;
   border: 1px solid #A0A0A0;
 }
 
 
-.p-DataGrid-scrollCorner {
+.lm-DataGrid-scrollCorner {
   background-color: #F0F0F0;
 }
 
 
-.p-DataGrid-scrollCorner::after {
+.lm-DataGrid-scrollCorner::after {
   content: '';
   position: absolute;
   top: 0;
