--- a/packages/default-theme/style/dockpanel.css
+++ b/packages/default-theme/style/dockpanel.css
@@ -8,7 +8,7 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-DockPanel-overlay {
+.lm-DockPanel-overlay {
   background: rgba(255, 255, 255, 0.6);
   border: 1px dashed black;
   transition-property: top, left, right, bottom;
