--- a/packages/default-theme/style/menu.css
+++ b/packages/default-theme/style/menu.css
@@ -8,7 +8,7 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-Menu {
+.lm-Menu {
   padding: 3px 0px;
   background: white;
   color: rgba(0, 0, 0, 0.87);
@@ -18,50 +18,50 @@
 }
 
 
-.p-Menu-item.p-mod-active {
+.lm-Menu-item.lm-mod-active {
   background: #E5E5E5;
 }
 
 
-.p-Menu-item.p-mod-disabled {
+.lm-Menu-item.lm-mod-disabled {
   color: rgba(0, 0, 0, 0.25);
 }
 
 
-.p-Menu-itemIcon {
+.lm-Menu-itemIcon {
   width: 21px;
   padding: 4px 2px;
 }
 
 
-.p-Menu-itemLabel {
+.lm-Menu-itemLabel {
   padding: 4px 35px 4px 2px;
 }
 
 
-.p-Menu-itemMnemonic {
+.lm-Menu-itemMnemonic {
   text-decoration: underline;
 }
 
 
-.p-Menu-itemShortcut {
+.lm-Menu-itemShortcut {
   padding: 4px 0px;
 }
 
 
-.p-Menu-itemSubmenuIcon {
+.lm-Menu-itemSubmenuIcon {
   width: 16px;
   padding: 4px 0px;
 }
 
 
-.p-Menu-item[data-type='separator'] > div {
+.lm-Menu-item[data-type='separator'] > div {
   padding: 0;
   height: 9px;
 }
 
 
-.p-Menu-item[data-type='separator'] > div::after {
+.lm-Menu-item[data-type='separator'] > div::after {
   content: '';
   display: block;
   position: relative;
@@ -70,17 +70,17 @@
 }
 
 
-.p-Menu-itemIcon::before,
-.p-Menu-itemSubmenuIcon::before {
+.lm-Menu-itemIcon::before,
+.lm-Menu-itemSubmenuIcon::before {
   font-family: FontAwesome;
 }
 
 
-.p-Menu-item.p-mod-toggled > .p-Menu-itemIcon::before {
+.lm-Menu-item.lm-mod-toggled > .lm-Menu-itemIcon::before {
   content: '\f00c';
 }
 
 
-.p-Menu-item[data-type='submenu'] > .p-Menu-itemSubmenuIcon::before {
+.lm-Menu-item[data-type='submenu'] > .lm-Menu-itemSubmenuIcon::before {
   content: '\f0da';
 }
