--- a/packages/widgets/style/dockpanel.css
+++ b/packages/widgets/style/dockpanel.css
@@ -8,32 +8,32 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-DockPanel {
+.lm-DockPanel {
   z-index: 0;
 }
 
 
-.p-DockPanel-widget {
+.lm-DockPanel-widget {
   z-index: 0;
 }
 
 
-.p-DockPanel-tabBar {
+.lm-DockPanel-tabBar {
   z-index: 1;
 }
 
 
-.p-DockPanel-handle {
+.lm-DockPanel-handle {
   z-index: 2;
 }
 
 
-.p-DockPanel-handle.p-mod-hidden {
+.lm-DockPanel-handle.lm-mod-hidden {
   display: none !important;
 }
 
 
-.p-DockPanel-handle:after {
+.lm-DockPanel-handle:after {
   position: absolute;
   top: 0;
   left: 0;
@@ -43,37 +43,37 @@
 }
 
 
-.p-DockPanel-handle[data-orientation='horizontal'] {
+.lm-DockPanel-handle[data-orientation='horizontal'] {
   cursor: ew-resize;
 }
 
 
-.p-DockPanel-handle[data-orientation='vertical'] {
+.lm-DockPanel-handle[data-orientation='vertical'] {
   cursor: ns-resize;
 }
 
 
-.p-DockPanel-handle[data-orientation='horizontal']:after {
+.lm-DockPanel-handle[data-orientation='horizontal']:after {
   left: 50%;
   min-width: 8px;
   transform: translateX(-50%);
 }
 
 
-.p-DockPanel-handle[data-orientation='vertical']:after {
+.lm-DockPanel-handle[data-orientation='vertical']:after {
   top: 50%;
   min-height: 8px;
   transform: translateY(-50%);
 }
 
 
-.p-DockPanel-overlay {
+.lm-DockPanel-overlay {
   z-index: 3;
   box-sizing: border-box;
   pointer-events: none;
 }
 
 
-.p-DockPanel-overlay.p-mod-hidden {
+.lm-DockPanel-overlay.lm-mod-hidden {
   display: none !important;
 }
