--- a/packages/widgets/style/menubar.css
+++ b/packages/widgets/style/menubar.css
@@ -8,7 +8,7 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-MenuBar {
+.lm-MenuBar {
   outline: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -17,7 +17,7 @@
 }
 
 
-.p-MenuBar-content {
+.lm-MenuBar-content {
   margin: 0;
   padding: 0;
   display: flex;
@@ -26,12 +26,12 @@
 }
 
 
-.p-MenuBar-item {
+.lm-MenuBar-item {
   box-sizing: border-box;
 }
 
 
-.p-MenuBar-itemIcon,
-.p-MenuBar-itemLabel {
+.lm-MenuBar-itemIcon,
+.lm-MenuBar-itemLabel {
   display: inline-block;
 }
