--- a/packages/widgets/style/splitpanel.css
+++ b/packages/widgets/style/splitpanel.css
@@ -8,22 +8,22 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-SplitPanel-child {
+.lm-SplitPanel-child {
   z-index: 0;
 }
 
 
-.p-SplitPanel-handle {
+.lm-SplitPanel-handle {
   z-index: 1;
 }
 
 
-.p-SplitPanel-handle.p-mod-hidden {
+.lm-SplitPanel-handle.lm-mod-hidden {
   display: none !important;
 }
 
 
-.p-SplitPanel-handle:after {
+.lm-SplitPanel-handle:after {
   position: absolute;
   top: 0;
   left: 0;
@@ -33,24 +33,24 @@
 }
 
 
-.p-SplitPanel[data-orientation='horizontal'] > .p-SplitPanel-handle {
+.lm-SplitPanel[data-orientation='horizontal'] > .lm-SplitPanel-handle {
   cursor: ew-resize;
 }
 
 
-.p-SplitPanel[data-orientation='vertical'] > .p-SplitPanel-handle {
+.lm-SplitPanel[data-orientation='vertical'] > .lm-SplitPanel-handle {
   cursor: ns-resize;
 }
 
 
-.p-SplitPanel[data-orientation='horizontal'] > .p-SplitPanel-handle:after {
+.lm-SplitPanel[data-orientation='horizontal'] > .lm-SplitPanel-handle:after {
   left: 50%;
   min-width: 8px;
   transform: translateX(-50%);
 }
 
 
-.p-SplitPanel[data-orientation='vertical'] > .p-SplitPanel-handle:after {
+.lm-SplitPanel[data-orientation='vertical'] > .lm-SplitPanel-handle:after {
   top: 50%;
   min-height: 8px;
   transform: translateY(-50%);
