--- a/packages/widgets/style/tabbar.css
+++ b/packages/widgets/style/tabbar.css
@@ -8,7 +8,7 @@
 |----------------------------------------------------------------------------*/
 
 
-.p-TabBar {
+.lm-TabBar {
   display: flex;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -17,17 +17,17 @@
 }
 
 
-.p-TabBar[data-orientation='horizontal'] {
+.lm-TabBar[data-orientation='horizontal'] {
   flex-direction: row;
 }
 
 
-.p-TabBar[data-orientation='vertical'] {
+.lm-TabBar[data-orientation='vertical'] {
   flex-direction: column;
 }
 
 
-.p-TabBar-content {
+.lm-TabBar-content {
   margin: 0;
   padding: 0;
   display: flex;
@@ -36,17 +36,17 @@
 }
 
 
-.p-TabBar[data-orientation='horizontal'] > .p-TabBar-content {
+.lm-TabBar[data-orientation='horizontal'] > .lm-TabBar-content {
   flex-direction: row;
 }
 
 
-.p-TabBar[data-orientation='vertical'] > .p-TabBar-content {
+.lm-TabBar[data-orientation='vertical'] > .lm-TabBar-content {
   flex-direction: column;
 }
 
 
-.p-TabBar-tab {
+.lm-TabBar-tab {
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
@@ -54,41 +54,41 @@
 }
 
 
-.p-TabBar-tabIcon,
-.p-TabBar-tabCloseIcon {
+.lm-TabBar-tabIcon,
+.lm-TabBar-tabCloseIcon {
   flex: 0 0 auto;
 }
 
 
-.p-TabBar-tabLabel {
+.lm-TabBar-tabLabel {
   flex: 1 1 auto;
   overflow: hidden;
   white-space: nowrap;
 }
 
 
-.p-TabBar-tab.p-mod-hidden {
+.lm-TabBar-tab.lm-mod-hidden {
   display: none !important;
 }
 
 
-.p-TabBar.p-mod-dragging .p-TabBar-tab {
+.lm-TabBar.lm-mod-dragging .lm-TabBar-tab {
   position: relative;
 }
 
 
-.p-TabBar.p-mod-dragging[data-orientation='horizontal'] .p-TabBar-tab {
+.lm-TabBar.lm-mod-dragging[data-orientation='horizontal'] .lm-TabBar-tab {
   left: 0;
   transition: left 150ms ease;
 }
 
 
-.p-TabBar.p-mod-dragging[data-orientation='vertical'] .p-TabBar-tab {
+.lm-TabBar.lm-mod-dragging[data-orientation='vertical'] .lm-TabBar-tab {
   top: 0;
   transition: top 150ms ease;
 }
 
 
-.p-TabBar.p-mod-dragging .p-TabBar-tab.p-mod-dragging {
+.lm-TabBar.lm-mod-dragging .lm-TabBar-tab.lm-mod-dragging {
   transition: none;
 }
