--- a/packages/default-theme/style/datagrid.css
+++ b/packages/default-theme/style/datagrid.css
@@ -6,19 +6,19 @@
 | The full license is in the file LICENSE, distributed with this software.
 |----------------------------------------------------------------------------*/
 
-.p-DataGrid {
+.lm-DataGrid {
   min-width: 64px;
   min-height: 64px;
   border: 1px solid #A0A0A0;
 }
 
 
-.p-DataGrid-scrollCorner {
+.lm-DataGrid-scrollCorner {
   background-color: #F0F0F0;
 }
 
 
-.p-DataGrid-scrollCorner::after {
+.lm-DataGrid-scrollCorner::after {
   content: '';
   position: absolute;
   top: 0;
@@ -28,13 +28,13 @@
   background-color: #A0A0A0;
 }
 
-.p-DataGrid-cellEditorOccluder {
+.lm-DataGrid-cellEditorOccluder {
   pointer-events: none;
   position: absolute;
   overflow: hidden;
 }
 
-.p-DataGrid-cellEditorContainer {
+.lm-DataGrid-cellEditorContainer {
   position: absolute;
   background-color: #ffffff;
   box-sizing: border-box;
@@ -42,29 +42,29 @@
   border: 2px solid #006bf7;
 }
 
-.p-DataGrid-cellEditorContainer.invalid {
+.lm-DataGrid-cellEditorContainer.invalid {
   box-shadow: 0px 0px 6px red;
   border: 2px solid red;
 }
 
-.p-DataGrid-cellEditorContainer > form {
+.lm-DataGrid-cellEditorContainer > form {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
-.p-DataGrid-cellEditorWidget {
+.lm-DataGrid-cellEditorWidget {
   width: 100%;
   height: 100%;
   outline: none;
   box-sizing: border-box;
 }
 
-.p-DataGrid-cellEditorInput {
+.lm-DataGrid-cellEditorInput {
   background-color: #ffffff;
   border: 0;
 }
 
-.p-DataGrid-cellEditorCheckbox {
+.lm-DataGrid-cellEditorCheckbox {
   margin: 0;
 }
