--- a/packages/default-theme/style/datagrid.css
+++ b/packages/default-theme/style/datagrid.css
@@ -35,6 +35,7 @@
 }
 
 .lm-DataGrid-cellEditorContainer {
+  pointer-events: auto;
   position: absolute;
   background-color: #ffffff;
   box-sizing: border-box;
