--- a/packages/default-theme/style/datagrid.css
+++ b/packages/default-theme/style/datagrid.css
@@ -6,6 +6,8 @@
 | The full license is in the file LICENSE, distributed with this software.
 |----------------------------------------------------------------------------*/
 
+
+/* <DEPRECATED> */ .p-DataGrid, /* </DEPRECATED> */
 .lm-DataGrid {
   min-width: 64px;
   min-height: 64px;
@@ -13,11 +15,13 @@
 }
 
 
+/* <DEPRECATED> */ .p-DataGrid-scrollCorner, /* </DEPRECATED> */
 .lm-DataGrid-scrollCorner {
   background-color: #F0F0F0;
 }
 
 
+/* <DEPRECATED> */ .p-DataGrid-scrollCorner::after, /* </DEPRECATED> */
 .lm-DataGrid-scrollCorner::after {
   content: '';
   position: absolute;
