Add back the deprecated styles for the dragdrop package.

--- a/packages/dragdrop/style/index.css
+++ b/packages/dragdrop/style/index.css
@@ -8,6 +8,7 @@
 |----------------------------------------------------------------------------*/
 
 
+/* <DEPRECATED> */ body.p-mod-override-cursor *, /* </DEPRECATED> */
 body.lm-mod-override-cursor * {
   cursor: inherit !important;
 }
