Fix sluggish tab dragging in the tab bar.
A typo in commit 45c6f21bf55f19eb36cbe95172eb18e5e5114422 prevented a rule from applying to tab elements. The effect is that a CSS transition is always applied to tabs when dragging them, and dragging tabs inside the tab bar is less responsive.

--- a/packages/widgets/style/tabbar.css
+++ b/packages/widgets/style/tabbar.css
@@ -121,7 +121,7 @@
 
 
 /* <DEPRECATED> */
-.p-TabBar.p-mod-dragging .p-TabBar-tab.p-mod-dragging
+.p-TabBar.p-mod-dragging .p-TabBar-tab.p-mod-dragging,
 /* </DEPRECATED> */
 .lm-TabBar.lm-mod-dragging .lm-TabBar-tab.lm-mod-dragging {
   transition: none;
