--- a/packages/default-theme/style/index.css
+++ b/packages/default-theme/style/index.css
@@ -7,6 +7,7 @@
 |----------------------------------------------------------------------------*/
 @import '~@lumino/dragdrop/style/index.css';
 @import '~@lumino/widgets/style/index.css';
+@import './accordionpanel.css';
 @import './commandpalette.css';
 @import './datagrid.css';
 @import './dockpanel.css';
