--- a/examples/example-accordionpanel/style/content.css
+++ b/examples/example-accordionpanel/style/content.css
@@ -10,18 +10,23 @@
   flex-direction: column;
   padding: 8px;
   border: 1px solid #C0C0C0;
-  border-top: none;
   background: white;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
+.lm-AccordionPanel[data-orientation="vertical"] .content {
+  border-top: none;
+}
+
+.lm-AccordionPanel[data-orientation="horizontal"] .content {
+  border-left: none;
+}
 
 .content > div {
   flex: 1 1 auto;
   border: 1px solid #505050;
   overflow: auto;
 }
-
 
 .content  input {
   margin: 8px;
