Use PointerEvents instead of TouchEvents
Recommended by: @afshin on #123

Found native browser drag/drop inadvertently firing the pointercancel event.
Disabled with css `pointer-events: none` on tabs.

Details: https://javascript.info/pointer-events#event-pointercancel

--- a/packages/widgets/style/tabbar.css
+++ b/packages/widgets/style/tabbar.css
@@ -62,6 +62,7 @@
   flex-direction: row;
   box-sizing: border-box;
   overflow: hidden;
+  touch-action: none; /* Disable native Drag/Drop */
 }
 
 /* <DEPRECATED> */
