Implement scrolling to active tab, fix styles, add release guard

--- a/packages/widgets/style/tabbar.css
+++ b/packages/widgets/style/tabbar.css
@@ -70,7 +70,7 @@
   display: none !important;
 }
 
-.lm-TabBar-addButton.lm-mod-hidden {
+.lm-TabBar-button.lm-mod-hidden {
   display: none !important;
 }
 
