Remove deprecated APIs and fix tests.
Co-authored-by: Naveen Michaud-Agrawal <naveen.michaudagrawal@gmail.com>

--- a/packages/default-theme/style/scrollbar.css
+++ b/packages/default-theme/style/scrollbar.css
@@ -7,9 +7,6 @@
 | The full license is in the file LICENSE, distributed with this software.
 |----------------------------------------------------------------------------*/
 
-/* <DEPRECATED> */
-.p-ScrollBar[data-orientation='horizontal'],
-/* </DEPRECATED> */
 .lm-ScrollBar[data-orientation='horizontal'] {
   min-height: 16px;
   max-height: 16px;
@@ -17,9 +14,6 @@
   border-top: 1px solid #a0a0a0;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar[data-orientation='vertical'],
-/* </DEPRECATED> */
 .lm-ScrollBar[data-orientation='vertical'] {
   min-width: 16px;
   max-width: 16px;
@@ -27,8 +21,6 @@
   border-left: 1px solid #a0a0a0;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar-button, /* </DEPRECATED> */
 .lm-ScrollBar-button {
   background-color: #f0f0f0;
   background-position: center center;
@@ -38,45 +30,30 @@
   max-width: 15px;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar-button:hover, /* </DEPRECATED> */
 .lm-ScrollBar-button:hover {
   background-color: #dadada;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar-button.p-mod-active, /* </DEPRECATED> */
 .lm-ScrollBar-button.lm-mod-active {
   background-color: #cdcdcd;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar-track, /* </DEPRECATED> */
 .lm-ScrollBar-track {
   background: #f0f0f0;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar-thumb, /* </DEPRECATED> */
 .lm-ScrollBar-thumb {
   background: #cdcdcd;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar-thumb:hover, /* </DEPRECATED> */
 .lm-ScrollBar-thumb:hover {
   background: #bababa;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar-thumb.lm-mod-active, /* </DEPRECATED> */
 .lm-ScrollBar-thumb.lm-mod-active {
   background: #a0a0a0;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar[data-orientation='horizontal'] .p-ScrollBar-thumb,
-/* </DEPRECATED> */
 .lm-ScrollBar[data-orientation='horizontal'] .lm-ScrollBar-thumb {
   height: 100%;
   min-width: 15px;
@@ -84,9 +61,6 @@
   border-right: 1px solid #a0a0a0;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar[data-orientation='vertical'] .p-ScrollBar-thumb,
-/* </DEPRECATED> */
 .lm-ScrollBar[data-orientation='vertical'] .lm-ScrollBar-thumb {
   width: 100%;
   min-height: 15px;
@@ -94,30 +68,22 @@
   border-bottom: 1px solid #a0a0a0;
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar[data-orientation='horizontal'] .p-ScrollBar-button[data-action='decrement'],
-/* </DEPRECATED> */
-.lm-ScrollBar[data-orientation='horizontal'] .lm-ScrollBar-button[data-action='decrement'] {
+.lm-ScrollBar[data-orientation='horizontal']
+  .lm-ScrollBar-button[data-action='decrement'] {
   background-image: url(../images/caretleft.png);
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar[data-orientation='horizontal'] .p-ScrollBar-button[data-action='increment'],
-/* </DEPRECATED> */
-.lm-ScrollBar[data-orientation='horizontal'] .lm-ScrollBar-button[data-action='increment'] {
+.lm-ScrollBar[data-orientation='horizontal']
+  .lm-ScrollBar-button[data-action='increment'] {
   background-image: url(../images/caretright.png);
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar[data-orientation='vertical'] .p-ScrollBar-button[data-action='decrement'],
-/* </DEPRECATED> */
-.lm-ScrollBar[data-orientation='vertical'] .lm-ScrollBar-button[data-action='decrement'] {
+.lm-ScrollBar[data-orientation='vertical']
+  .lm-ScrollBar-button[data-action='decrement'] {
   background-image: url(../images/caretup.png);
 }
 
-/* <DEPRECATED> */
-.p-ScrollBar[data-orientation='vertical'] .p-ScrollBar-button[data-action='increment'],
-/* </DEPRECATED> */
-.lm-ScrollBar[data-orientation='vertical'] .lm-ScrollBar-button[data-action='increment'] {
+.lm-ScrollBar[data-orientation='vertical']
+  .lm-ScrollBar-button[data-action='increment'] {
   background-image: url(../images/caretdown.png);
 }
