Use Rollup for tests and examples (#348)
* Replace webpack with rollup for packages/algorithm/tests

* Use Rollup with example-accordionpanel

* Apply suggestions from code review

Co-authored-by: Frédéric Collonval <fcollonval@users.noreply.github.com>

* Consolidate rollup configs

* finish adding rollup to examples

* update createRollupConfig() call

* call createRollupConfig() from algorithm/test/rollup.config.js

* rollup packages/application

* remove webpack config file from algorithm/tests

* remove webpack from remaining packages

* update Yarn lock file

* use base config in coreutils

* fix dependencies in drapdrop and widgets

* Upgrade rollup

* Automatic application of license header

Co-authored-by: Frédéric Collonval <fcollonval@users.noreply.github.com>
Co-authored-by: Frédéric Collonval <fcollonval@gmail.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/packages/default-theme/style/index.css
+++ b/packages/default-theme/style/index.css
@@ -10,8 +10,8 @@
 |
 | The full license is in the file LICENSE, distributed with this software.
 |----------------------------------------------------------------------------*/
-@import '~@lumino/dragdrop/style/index.css';
-@import '~@lumino/widgets/style/index.css';
+@import '@lumino/dragdrop/style/index.css';
+@import '@lumino/widgets/style/index.css';
 @import './accordionpanel.css';
 @import './commandpalette.css';
 @import './datagrid.css';
