--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -35,7 +35,8 @@ div.wy-side-nav-search {
 .rst-content img.jp-screenshot {
   border: none;
   /* MD Elevation 8 */
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+  box-shadow:
+    0px 5px 5px -3px rgba(0, 0, 0, 0.2),
     0px 8px 10px 1px rgba(145, 145, 145, 0.14),
     0px 3px 14px 2px rgba(0, 0, 0, 0.12);
   margin-bottom: 24px;
@@ -55,8 +56,10 @@ div.wy-side-nav-search {
   padding-bottom: 56.25%;
   border: none;
   /* MD Elevation 8 */
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow:
+    0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0px 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0px 3px 14px 2px rgba(0, 0, 0, 0.12);
   margin-bottom: 24px;
 }
 
