MenuBar: do not focus on hover (#607)
* wip

* do not allow empty menu to be active

* remove underline

* newline

* return test line

* fix prevent default

* reduce repeated comments

* missed a spot

* move some comments around

* yarn api && yarn lint

* Add menubar example to doc

* Update packages/widgets/src/menubar.ts

Co-authored-by: Frédéric Collonval <fcollonval@users.noreply.github.com>

* Fix CI

---------

Co-authored-by: Frédéric Collonval <fcollonval@gmail.com>
Co-authored-by: Frédéric Collonval <fcollonval@users.noreply.github.com>

--- a/packages/default-theme/style/menubar.css
+++ b/packages/default-theme/style/menubar.css
@@ -44,3 +44,12 @@
   border-right: 1px solid #c0c0c0;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
 }
+
+.lm-MenuBar-item:focus-visible {
+  outline: 2px solid #333;
+  outline-offset: -2px;
+}
+
+.lm-MenuBar-item[aria-disabled='true'] {
+  color: rgba(0, 0, 0, 0.37);
+}
