Propagate scroll from backdrop (#652)
* Propagate scrolling from backdrop to scroll target

* Add a test case for scroll propagation

* Ensure the scroll works through longer ranges

* Fix a typo in a private function

--- a/packages/dragdrop/style/index.css
+++ b/packages/dragdrop/style/index.css
@@ -13,6 +13,8 @@
 |----------------------------------------------------------------------------*/
 
 .lm-cursor-backdrop {
+  top: 0px;
+  left: 0px;
   position: fixed;
   width: 200px;
   height: 200px;
@@ -20,6 +22,20 @@
   margin-left: -100px;
   will-change: transform;
   z-index: 100;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  overflow: scroll;
+}
+
+.lm-cursor-backdrop::after {
+  content: '';
+  height: 1200px;
+  width: 1200px;
+  display: block;
+}
+
+.lm-cursor-backdrop::-webkit-scrollbar {
+  display: none;
 }
 
 .lm-mod-drag-image {
