changed bakground color to none

--- a/packages/widgets/style/tabbar.css
+++ b/packages/widgets/style/tabbar.css
@@ -58,8 +58,7 @@
 .lm-TabBar-tabCloseIcon {
   flex: 0 0 auto;
   border: none;
-  padding: 0;
-  background: var(--jp-layout-color1);
+  background: none;
 }
 
 .lm-TabBar-tabLabel {
