Add orange and purple styles to accordion panel

--- a/examples/example-accordionpanel/style/content.css
+++ b/examples/example-accordionpanel/style/content.css
@@ -47,3 +47,11 @@
 .blue > div {
   background: #3498db;
 }
+
+.orange > div {
+  background: #e67e22;
+}
+
+.purple > div {
+  background: #9b59b6;
+}
